--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "matplotlib"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "custom_mpl"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
   { name="Rafal Nojek", email="rafal.nojek@shell.com" },
 ]
@@ -12,6 +12,7 @@ description = "A small package of custom matplotlib style sheets"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
+    "Framework :: Matplotlib",
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
